# quiet-ledger

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  wave_task.md
.github/workflows/: ci.yml  security.yml
agent/: README.md
circuits/merkle_membership/: README.md
circuits/range_disclosure/: README.md  circuit.circom
circuits/threshold_attestation/: README.md
contracts/attestation_registry/: Cargo.toml
contracts/attestation_registry/src/: lib.rs
contracts/proof_verifier/: Cargo.toml
contracts/proof_verifier/src/: lib.rs
contracts/threshold_attestation/: Cargo.toml
contracts/threshold_attestation/src/: lib.rs
contracts/travel_rule_envelope/: Cargo.toml
contracts/travel_rule_envelope/src/: lib.rs
docs/: RFC.md  THREAT_MODEL.md
e2e/: 01_setup_and_deploy.sh  02_attestation_registry_flow.sh  03_travel_rule_envelope_flow.sh  04_threshold_attestation_flow.sh  README.md  lib.sh  run_all.sh
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/rust/tests/: live_testnet.rs
sdk/ts/: eslint.config.js  package-lock.json  package.json  tsconfig.json
sdk/ts/__tests__/: index.test.ts
sdk/ts/src/: index.ts
